# sc-axelar-cgp-rs

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: actions.yml  release.yml
auth/: Cargo.toml  README.md
auth/meta/: Cargo.toml
auth/src/: constants.rs  lib.rs
auth/wasm/: Cargo.toml
gas-service/: Cargo.toml  README.md
gas-service/meta/: Cargo.toml
gas-service/src/: events.rs  lib.rs
gas-service/wasm/: Cargo.toml
gateway/: Cargo.toml  README.md
gateway/meta/: Cargo.toml
gateway/src/: auth.rs  constants.rs  events.rs  functions.rs  governance.rs  lib.rs  operator.rs  proxy.rs  tokens.rs
gateway/tests/: gateway_whitebox_test.rs
gateway/wasm/: Cargo.toml
governance/: Cargo.toml  README.md
governance/meta/: Cargo.toml
governance/src/: events.rs  lib.rs
governance/wasm/: Cargo.toml
interact/: data.json  generateProofRaw.ts  hello-world.wasm  index.ts  its.ts  test.ts
interact/helpers/: axelar-utils.ts
interchain-token-factory/: Cargo.toml  README.md
interchain-token-factory/meta/: Cargo.toml
interchain-token-factory/meta/src/: main.rs
interchain-token-factory/scenarios/: empty.scen.json
interchain-token-factory/src/: constants.rs  events.rs  lib.rs  proxy.rs
interchain-token-factory/tests/: empty_scenario_rs_test.rs
interchain-token-factory/wasm/: Cargo.toml
interchain-token-factory/wasm/src/: lib.rs
interchain-token-service/: Cargo.toml  README.md
interchain-token-service-proxy/: Cargo.toml  README.md
interchain-token-service-proxy/meta/: Cargo.toml
interchain-token-service-proxy/src/: lib.rs
interchain-token-service-proxy/wasm/: Cargo.toml
interchain-token-service/meta/: Cargo.toml
interchain-token-service/meta/src/: main.rs
interchain-token-service/src/: abi.rs  abi_types.rs  address_tracker.rs  constants.rs  events.rs  executable.rs  express_executor_tracker.rs  factory.rs  lib.rs  proxy.rs  proxy_cgp.rs  proxy_gmp.rs  proxy_its.rs  remote.rs  user_functions.rs
interchain-token-service/tests/: its_abi_decode_test.rs  its_abi_encode_test.rs
interchain-token-service/wasm/: Cargo.toml
interchain-token-service/wasm/src/: lib.rs
modules/flow-limit/: Cargo.toml
modules/operatable/: Cargo.toml
modules/token-manager/: Cargo.toml
multicall/: Cargo.toml
multicall/meta/: Cargo.toml
multicall/src/: constants.rs  multicall.rs
multicall/wasm/: Cargo.toml
ping-pong-interchain/: Cargo.toml  README.md
ping-pong-interchain/meta/: Cargo.toml
ping-pong-interchain/src/: ping_pong.rs
ping-pong-interchain/wasm/: Cargo.toml
remote-address-validator/: Cargo.toml  README.md
remote-address-validator/meta/: Cargo.toml
remote-address-validator/scenarios/: empty.scen.json
remote-address-validator/src/: lib.rs
remote-address-validator/tests/: empty_scenario_rs_test.rs
remote-address-validator/wasm/: Cargo.toml
tests/: authTransferOperatorship.test.ts  authValidateProof.test.ts  contract.test.ts  contractExecute.test.ts  gasService.test.ts  gateway.test.ts  gatewayExecute.test.ts  governance.test.ts  helpers.ts  its.test.ts  itsHelpers.ts  tokenManagerMintBurn.test.ts
tests/cgp/: authTransferOperatorship.test.ts  authValidateProof.test.ts  gasService.test.ts  gateway.test.ts  gatewayExecute.test.ts
tests/gmp/: gasService.test.ts  gateway.test.ts
tests/its/: interchainTokenFactory.test.ts  interchainTokenFactory.test.ts.dist  itsCrossChainCalls.test.ts  itsDeploy.test.ts  itsExecuteDeployAndRegisterStandardizedToken.test.ts  itsExpressExecute.test.ts  (+21 more)
token-manager/: Cargo.toml  README.md
token-manager-lock-unlock/: Cargo.toml  README.md
token-manager-mint-burn/: Cargo.toml  README.md
token-manager-mint-burn/meta/: Cargo.toml
token-manager-mint-burn/meta/src/: main.rs
token-manager-mint-burn/scenarios/: empty.scen.json
token-manager-mint-burn/src/: distributable.rs  lib.rs  minter.rs
token-manager-mint-burn/tests/: empty_scenario_rs_test.rs
token-manager-mint-burn/wasm/: Cargo.toml
token-manager-mint-burn/wasm/src/: lib.rs
(+40 files in other folders)
