[workspace]
resolver = "2"

members = [
    "auth",
    "auth/meta",
    "gas-service",
    "gas-service/meta",
    "gateway",
    "gateway/meta",
    "interchain-token-service",
    "interchain-token-service/meta",
    "ping-pong-interchain",
    "ping-pong-interchain/meta",
    "token-manager",
    "token-manager/meta",
    "interchain-token-factory",
    "interchain-token-factory/meta"
]
