[package]
name = "interchain-token-factory"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.46.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"

[dependencies.interchain-token-service]
path = "../interchain-token-service"

[dependencies.operatable]
path = "../modules/operatable"

[dependencies.token-manager]
path = "../token-manager"
