[package]
name = "interchain-token-service"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.50.3"

[dependencies.multiversx-sc-modules]
version = "0.50.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.3"

[dependencies.operatable]
path = "../modules/operatable"

[dependencies.token-manager]
path = "../token-manager"

[dependencies.gas-service]
path = "../gas-service"

[dependencies.gateway]
path = "../gateway"
