[package]
name = "token-manager-mint-burn"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.43.4"

[dependencies.flow-limit]
path = "../modules/flow-limit"

[dependencies.token-manager]
path = "../modules/token-manager"

[dev-dependencies.multiversx-sc-scenario]
version = "0.43.4"
